<resources>
    <string name="app_name">Body Build Challenge</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_menu_sortby">Sort By</string>
    <string name="text_name">Name</string>
    <string name="text_age">Age</string>

    <string name="spinner_default">Sort By</string>
    <string name="spinner_username">Username</string>
    <string name="spinner_age">Age</string>
    <string name="text_direction">Direction</string>

    <string name="transition_username">UserName</string>
    <string name="transition_age">UserAge</string>
    <string name="transition_image">UserImage</string>
    <string name="transition_city">UserCity</string>
    <string name="transition_state">UserState</string>
    <string name="transition_country">UserCountry</string>

    <string name="transition_bitmap">bitmap</string>

    <string name="buton_text_note">Note</string>
    <string name="image_content_desc">user image</string>
    <string name="text_weight_label">Weight:</string>
    <string name="text_height_label">Height:</string>
    <string name="text_age_label">Age:</string>
    <string name="text_name_label">Name:</string>
    <string name="text_bodyfat_label">BodyFat:</string>
    <string name="text_save">Save</string>
    <string name="text_clear">Clear</string>
    <string name="text_close">Close</string>
</resources>
