<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_parent_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:drawSelectorOnTop="true"
    android:hapticFeedbackEnabled="true"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/recycle_card_view"
        style="@style/CardViewStyle.Light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/quarter_margin"
        android:layout_marginTop="@dimen/quarter_margin"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:minHeight="95dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/half_margin"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/image_content_desc"
                    android:transitionName="@string/transition_bitmap"
                    android:scaleType="fitCenter" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/full_margin"
                android:layout_toRightOf="@+id/layout_left"
                android:gravity="top|start|left"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/appMediumFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/half_margin"
                        android:text="@string/text_name_label" />

                    <TextView
                        android:id="@+id/home_userName"
                        style="@style/appSmallFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:transitionName="@string/transition_username" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/appMediumFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/half_margin"
                        android:layout_marginRight="@dimen/half_margin"
                        android:gravity="center_vertical"
                        android:text="@string/text_age_label" />

                    <TextView
                        android:id="@+id/home_userAge"
                        style="@style/appSmallFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text=""
                        android:transitionName="@string/transition_age" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="top|right|end"
                android:gravity="top|right|end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home_userCity"
                    style="@style/appSmallFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right|end"
                    android:transitionName="@string/transition_city" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/home_userState"
                        style="@style/appSmallFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:transitionName="@string/transition_state" />

                    <TextView
                        android:id="@+id/home_userCountry"
                        style="@style/appSmallFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/half_margin"
                        android:gravity="center_vertical"
                        android:transitionName="@string/transition_country" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/note_button"
                    style="@style/buttonStandard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|end"
                    android:elevation="10dp"
                    android:visibility="gone"
                    android:text="@string/buton_text_note" />
            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>