<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:background="@color/detail"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/includeLayout"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/half_margin"
        android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/recipe_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/full_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_username"
                    style="@style/appLargeFontBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="USERNAME"
                    android:transitionName="@string/transition_username" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/textview_username"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview_usercity"
                        style="@style/appMediumFontBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|right|end"
                        android:text="CITY"
                        android:transitionName="@string/transition_city" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|end"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textview_userstate"
                            style="@style/appMediumFontBlack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="STATE"
                            android:transitionName="@string/transition_state" />

                        <TextView
                            android:id="@+id/textview_usercountry"
                            style="@style/appMediumFontBlack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/half_margin"
                            android:gravity="center_vertical"
                            android:text="COUNTRY"
                            android:transitionName="@string/transition_country" />
                    </LinearLayout>
                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/full_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageview_userimage"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="@dimen/full_margin"
                    android:layout_marginRight="@dimen/full_margin"
                    android:background="@color/black"
                    android:transitionName="@string/transition_bitmap" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:measureWithLargestChild="false">

                            <TextView
                                style="@style/appMediumFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/quarter_margin"
                                android:gravity="right|end"
                                android:text="@string/text_name_label" />

                            <TextView
                                android:id="@+id/textview_userrealname"
                                style="@style/appSmallFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="left|start"
                                android:maxLines="2"
                                android:paddingBottom="@dimen/eighth_margin"
                                android:singleLine="false"
                                android:text="Ed, but everyone calls me popps" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                style="@style/appMediumFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/quarter_margin"
                                android:gravity="right|end"
                                android:text="@string/text_age_label" />

                            <TextView
                                android:id="@+id/textview_userage"
                                style="@style/appSmallFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left|start"
                                android:transitionName="@string/transition_age" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                style="@style/appMediumFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/quarter_margin"
                                android:gravity="right|end"
                                android:text="@string/text_height_label" />

                            <TextView
                                android:id="@+id/textview_userheight"
                                style="@style/appSmallFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left|start" />

                        </TableRow>

                        <TableRow>

                            <TextView
                                style="@style/appMediumFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/quarter_margin"
                                android:gravity="right|end"
                                android:text="@string/text_weight_label" />

                            <TextView
                                android:id="@+id/textview_userweight"
                                style="@style/appSmallFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left|start" />

                        </TableRow>

                        <TableRow>

                            <TextView
                                style="@style/appMediumFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/quarter_margin"
                                android:gravity="right|end"
                                android:text="@string/text_bodyfat_label" />

                            <TextView
                                android:id="@+id/textview_bodyfat"
                                style="@style/appSmallFont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left|start" />

                        </TableRow>
                    </TableLayout>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/full_margin"

                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/quarter_margin"
                    app:hintTextAppearance="@style/hintTextCustom">

                    <EditText
                        android:id="@+id/edittext_note"
                        style="@style/appMediumFontStandard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:background="@color/textback"
                        android:gravity="start"
                        android:hint="@string/buton_text_note"
                        android:inputType="textMultiLine"
                        android:maxHeight="150dp"
                        android:minHeight="150dp"
                        android:padding="@dimen/quarter_margin"
                        android:scrollbars="vertical"
                        android:fadeScrollbars="false"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_cancel"
                    style="@style/buttonStandard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|end"
                    android:layout_weight="1"
                    android:elevation="10dp"
                    android:text="@string/text_clear" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|end"
                    android:layout_weight="1"
                    android:elevation="10dp"
                    android:text="@string/text_save"

                    android:theme="@style/AppTheme.Button" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>